--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
   </head>
   <body>
     
+      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                <div class="logo">
+                    <img src="img/logo.png">
+                </div>
+                </a>
+            </div>
+        </div>
+      </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
