--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                   </div>
                   <div class="col-md-3">
+                      <i class="fa fa-cloud-upload fa-4x"></i>
                       <h1>STORE IN THE CLOUD</h1>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                   </div>
                   <div class="col-md-3">
+                      <i class="fa fa-thumbs-up fa-4x"></i>
                       <h1>INSTANT FEEDBACK</h1>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                   </div>
