--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
       <section id="design">
           <div class="container">
                <div class="row">
-                   <div class="col-md-6">
-                       <img src="img/iphone.png" class="img-responsive"/>
+                   <div class="col-md-6 align" align="center">
+                       <img class="img-responsive" src="img/iphone.png"/>
                    </div>
                    <div class="col-md-6">
                        <h1>DESIGN</h1>
@@ -143,6 +143,26 @@
           </div>
       </section>
       <!-- La Fin de la section DESIGN -->
+      
+      <!-- OUR COMMUNITY -->
+      <section id="community">
+          <div class="container">
+              <div class="row" align="center">
+                  <div class="col-md-4">
+                      <img class="img-responsive green" src="img/logo-green.png" />
+                      <h1>OUR COMMUNITY</h1>
+                      <p>Lorem ipsum dolor sit amet, consecteturadipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                  </div>
+                  <div class="col-md-4 image">
+                       <img class="img-responsive" src="img/photo1.jpg" />
+                  </div>
+                  <div class="col-md-4 image">
+                       <img class="img-responsive" src="img/photo2.jpg" />
+                  </div>
+              </div>
+          </div>
+      </section>
+      <!-- La Fin de OUR COMMUNITY -->
       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
