--- a/index.html
+++ b/index.html
@@ -156,13 +156,31 @@
                   <div class="col-md-4 image">
                        <img class="img-responsive" src="img/photo1.jpg" />
                   </div>
-                  <div class="col-md-4 image">
+                  <div class="col-md-4">
                        <img class="img-responsive" src="img/photo2.jpg" />
                   </div>
               </div>
           </div>
       </section>
       <!-- La Fin de OUR COMMUNITY -->
+      
+      <!-- SIGN UP -->
+      <section id="signup">
+          <div class="container">
+              <div class="row">
+                      <h1>SUBSCRIBE TO OUR COMMUNITY</h1>
+                      <div class="col-md-4 col-md-offset-4">
+                          <div class="input-group">
+                              <input type="text" class="form-control" placeholder="YOUR EMAIL">
+                              <span class="input-group-btn">
+                                  <button class="btn btn-default" type="button"><i class="fa fa-check"></i></button>
+                              </span>
+                          </div>
+                      </div>
+              </div>
+          </div>
+      </section>      
+      <!-- La Fin de SIGN UP -->
       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
