footer section avec le css

--- a/index.html
+++ b/index.html
@@ -199,6 +199,21 @@
       </section>
       <!-- La Fin de DOWNLOAD -->
       
+      <!-- FOOTER -->
+      <section id="footer">
+          <div class="container"> 
+              <div class="row">
+                    <div class="col-md-4">
+                        <p><a href="#">CREDITS</a> | <a href="#">PRIVACY</a> | <a href="#">OUR TEAMS</a></p>
+                        <p>Copyright by RTAI. All rights reserved</p>
+                    </div>
+                  <div class="col-md-4 col-md-offset-4" align="right">
+                      <img class="img-responsive" src="img/logo-green.png"/>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <!-- La Fin dU FOOTER -->
       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
