fade bounce tada pour wow css animation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- font awsome for icons -->  
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">  
+    <!-- animate css min -->  
+    <link href="css/animate.min.css" rel="stylesheet">  
       
     <!-- font Signika Negative -->  
     <link href='https://fonts.googleapis.com/css?family=Signika+Negative' rel='stylesheet' type='text/css'>
@@ -100,22 +102,22 @@
       <section id="photo">
           <div class="container">
               <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-3 wow bounceInLeft" data-wow-delay="0.8s">
                       <i class="fa fa-camera-retro fa-4x"></i>
                       <h1>YOUR LIFE IN A PHOTO</h1>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 wow tada" data-wow-delay="0.3s">
                       <i class="fa fa-comments-o fa-4x"></i>
                       <h1>ENGAGE WITH OTHER USERS</h1>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 wow tada" data-wow-delay="0.3s">
                       <i class="fa fa-cloud-upload fa-4x"></i>
                       <h1>STORE IN THE CLOUD</h1>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-3 wow bounceInRight" data-wow-delay="0.8s">
                       <i class="fa fa-thumbs-up fa-4x"></i>
                       <h1>INSTANT FEEDBACK</h1>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
@@ -130,10 +132,10 @@
       <section id="design">
           <div class="container">
                <div class="row">
-                   <div class="col-md-6 align" align="center">
+                   <div class="col-md-6 align wow bounceInLeft" align="center">
                        <img class="img-responsive" src="img/iphone.png"/>
                    </div>
-                   <div class="col-md-6">
+                   <div class="col-md-6 wow bounceInRight">
                        <h1>DESIGN</h1>
                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -148,15 +150,15 @@
       <section id="community">
           <div class="container">
               <div class="row" align="center">
-                  <div class="col-md-4">
+                  <div class="col-md-4 wow fadeInUp">
                       <img class="img-responsive green" src="img/logo-green.png" />
                       <h1>OUR COMMUNITY</h1>
                       <p>Lorem ipsum dolor sit amet, consecteturadipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna, sed do eiusmod tempor incididunt ut labore et dolore.</p>
                   </div>
-                  <div class="col-md-4 image">
+                  <div class="col-md-4 image wow fadeInUp">
                        <img class="img-responsive" src="img/photo1.jpg" />
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 wow fadeInUp">
                        <img class="img-responsive" src="img/photo2.jpg" />
                   </div>
               </div>
@@ -190,8 +192,8 @@
                       <h1>DOWNLOADS</h1>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                       <ul class="list-inline">
-                          <li><a href="http://www.apple.com/"><img class="img-responsive" src="img/apple-store.png"/></a></li>
-                          <li><a href="https://play.google.com/store/apps"><img class="img-responsive" src="img/google-play.png"/></a></li>
+                          <li class="wow fadeInLeft"><a href="http://www.apple.com/"><img class="img-responsive" src="img/apple-store.png"/></a></li>
+                          <li class="wow fadeInRight"><a href="https://play.google.com/store/apps"><img class="img-responsive" src="img/google-play.png"/></a></li>
                       </ul>
                   </div>
               </div>
@@ -219,6 +221,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- wow.js -->  
+    <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
       
     <!-- pour que la navbar disparaisse apres un scroll de 500px vers le bas -->  
     <script>
